--- a/clearfix.html
+++ b/clearfix.html
@@ -9,7 +9,7 @@
   <body>
     <ul class="horizontal">
       <li><a href="#home" class="active">Home</a></li>
-      <li><a href="#news">Sky Sports News</a></li>
+      <li><a href="#news">Sky Sports News !!!!!!</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
